Fix double scroll issue

--- a/frontend/public/components/_notification-drawer.scss
+++ b/frontend/public/components/_notification-drawer.scss
@@ -1,4 +1,5 @@
 .co-notification-drawer {
   height: fit-content;
   z-index: 10;
+  height: fit-content;
 }
